<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Время последнего обновления: %s</string>
    <string name="currency_name">Currency name:</string>
    <string name="convert_to_currency">Convert to currency:</string>
    <string name="price">Price:</string>
    <string name="last_update">Last update:</string>
    <string name="high_day">Highest price of a day:</string>
    <string name="low_day">Lowest price of a day:</string>
    <string name="last_market">Last market:</string>
</resources>