<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CoinDetailActivity">

    <ImageView
        android:id="@+id/ivCurrency"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvCurrencyNameTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/currency_name"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvCurrencyName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCurrency"
        />

    <TextView
        android:id="@+id/tvCurrencyName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCurrencyNameTitle"
        app:layout_constraintTop_toTopOf="@id/tvCurrencyNameTitle"
        tools:text="BTC"
        android:layout_marginEnd="60dp"/>

    <TextView
        android:id="@+id/tvConvertedCurrencyTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/convert_to_currency"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvConvertedCurrencyName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrencyNameTitle" />

    <TextView
        android:id="@+id/tvConvertedCurrencyName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvConvertedCurrencyTitle"
        app:layout_constraintTop_toTopOf="@id/tvConvertedCurrencyTitle"
        tools:text="USD"
        android:layout_marginEnd="60dp"/>

    <TextView
        android:id="@+id/tvPriceTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/price"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvPrice"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConvertedCurrencyTitle" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvPriceTitle"
        app:layout_constraintTop_toTopOf="@id/tvPriceTitle"
        tools:text="16000.02"
        android:layout_marginEnd="60dp"/>

    <TextView
        android:id="@+id/tvLastUpdateTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/last_update"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLastUpdate"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceTitle" />

    <TextView
        android:id="@+id/tvLastUpdate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLastUpdateTitle"
        app:layout_constraintTop_toTopOf="@id/tvLastUpdateTitle"
        tools:text="16000.02"
        android:layout_marginEnd="60dp"/>

    <TextView
        android:id="@+id/tvHighDayTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/high_day"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvHighDay"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastUpdateTitle" />

    <TextView
        android:id="@+id/tvHighDay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvHighDayTitle"
        app:layout_constraintTop_toTopOf="@id/tvHighDayTitle"
        tools:text="16000.02"
        android:layout_marginEnd="60dp"/>

    <TextView
        android:id="@+id/tvLowDayTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/low_day"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLowDay"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHighDayTitle" />

    <TextView
        android:id="@+id/tvLowDay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLowDayTitle"
        app:layout_constraintTop_toTopOf="@id/tvLowDayTitle"
        tools:text="16000.02"
        android:layout_marginEnd="60dp"/>

    <TextView
        android:id="@+id/tvLastMarketTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/last_market"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLastMarket"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLowDayTitle" />

    <TextView
        android:id="@+id/tvLastMarket"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLastMarketTitle"
        app:layout_constraintTop_toTopOf="@id/tvLastMarketTitle"
        tools:text="16000.02"
        android:layout_marginEnd="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>